# google-gadgets-for-linux

./: ArchitectureOverview.md  BecomingAContributor.md  BinaryPackages.md  CMakeLists.txt  ChangeLog  DesktopGadgetsAPI.md  Doxyfile  DoxygenGuide.md  FAQ.md  GPGPublicKeys.md  GPGQuickStart.md  GglWithKDE4Plasma.md  History.md  HowToBuild.md  HowToLocalize.md  MSMPTQuickStart.md  Makefile.am  ProjectHome.md  QuickStart.md  README  SVKQuickStart.md  TODO.md  configure.ac  precompile.h
extensions/smjs_script_runtime/: CMakeLists.txt  Makefile.am  converter.cc  converter.h  gen_libmozjs_glue.sh  js_function_slot.cc  js_function_slot.h  js_native_wrapper.cc  js_native_wrapper.h  js_script_context.cc  js_script_context.h  js_script_runtime.cc  js_script_runtime.h  jscript_massager.cc  jscript_massager.h  jscript_massager.l  json.cc  libggadget-smjs-1.0.pc.in  libmozjs_glue.cc  libmozjs_glue.h  native_js_wrapper.cc
gadgets/todo/: Makefile.am  common.js  detail.js  detail.xml  main.js  options.js
ggadget/: CMakeLists.txt  Makefile.am  anchor_element.cc  anchor_element.h  audioclip_interface.h  backoff.cc  backoff.h  basic_element.cc  basic_element.h  basic_element_impl.h  button_element.cc  button_element.h  canvas_interface.h  canvas_utils.cc  canvas_utils.h  checkbox_element.cc  checkbox_element.h  clip_region.cc  clip_region.h  color.cc  color.h  combobox_element.cc  combobox_element.h  common.h  content_item.cc  content_item.h  contentarea_element.cc  contentarea_element.h  copy_element.cc  copy_element.h  decorated_view_host.cc  decorated_view_host.h  details_view.cc  details_view.h  details_view_data.cc  details_view_data.h  details_view_decorator.cc  digest_utils.cc  digest_utils.h  dir_file_manager.cc  (+202 more)
ggadget/dbus/: CMakeLists.txt  Makefile.am  dbus_proxy.cc  dbus_proxy.h  dbus_result_receiver.h  dbus_utils.cc  dbus_utils.h  libggadget-dbus-1.0.pc.in  scriptable_dbus_object.cc
ggadget/framework/: machine_interface.h  network.cc  network_interface.h  process_interface.h  wireless_access_point.cc  wireless_access_point.h
ggadget/graphics/: CMakeLists.txt  Makefile.am  cairo_canvas.cc  cairo_canvas.h  cairo_font.cc  cairo_font.h  cairo_graphics.cc  cairo_graphics.h
ggadget/gtk/: CMakeLists.txt  Makefile.am  cairo_canvas.cc  cairo_canvas.h  cairo_font.h  cairo_graphics.cc  cairo_graphics.h  cairo_image_base.cc  cairo_image_base.h  gadget_view_widget.cc  gadget_view_widget.h  global_file_manager.cc  global_file_manager.h  gtk_edit.cc  gtk_edit.h  gtk_gadget_host.cc  gtk_gadget_host.h  gtk_key_convert.cc  gtk_key_convert.h  gtk_main_loop.cc  gtk_main_loop.h  gtk_menu_impl.cc  gtk_menu_impl.h  gtk_view_host.cc  gtk_view_host.h  key_convert.cc  libggadget-gtk-1.0.pc  main_loop.cc  main_loop.h  menu_builder.cc  menu_builder.h  npapi_plugin_element.cc  options.cc  options.h  pixbuf_image.cc  pixbuf_image.h  rsvg_image.cc  rsvg_image.h  single_view_host.cc  single_view_host.h  (+6 more)
ggadget/gtkmoz/: CMakeLists.txt  browser_child.cc  browser_element.cc
ggadget/js/: CMakeLists.txt  Makefile.am  js_utils.cc  libggadget-js-1.0.pc.in
ggadget/linux/: CMakeLists.txt  Makefile.am  file_system.cc  file_system.h  framework.cc  framework.h  machine.cc  machine.h  memory.cc  memory.h  memory_interface.h  network.cc  network.h  network_interface.h  perfmon.cc  perfmon_interface.h  power.cc  power.h  process.cc  process.h  wireless.cc  wireless.h  wireless_access_point.cc
ggadget/mac/: ct_text_renderer.mm  quartz_canvas.mm  quartz_graphics.h  quartz_graphics.mm
ggadget/npapi/: CMakeLists.txt  Makefile.am  libggadget-npapi-1.0.pc.in  npapi_container.cc  npapi_plugin.cc  npapi_plugin.h  npapi_plugin_script.cc  npapi_plugin_script.h  npapi_utils.cc  npapi_utils.h
ggadget/qt/: CMakeLists.txt  Makefile.am  global_file_manager.cc  libggadget-qt-1.0.pc  libggadget-qt-1.0.pc.in  options.h  qt_canvas.cc  qt_canvas.h  qt_font.cc  qt_font.h  qt_gadget_host.h  qt_gadget_widget.cc  qt_gadget_widget.h  qt_graphics.cc  qt_graphics.h  qt_image.cc  qt_image.h  qt_main_loop.cc  qt_main_loop.h  qt_menu.cc  qt_menu.h  qt_view_host.cc  qt_view_host.h  qt_view_host_internal.h  qt_view_widget.cc  qt_view_widget.h  utilities.cc  utilities.h  utilities_internal.h
ggadget/smjs/: CMakeLists.txt  Makefile.am  converter.cc  converter.h  js_function_slot.cc  js_native_wrapper.cc  js_native_wrapper.h  js_script_context.cc  js_script_context.h  js_script_runtime.cc  js_script_runtime.h  jscript_massager.cc  jscript_massager.h  jscript_massager.l  json.cc  json.h  native_js_wrapper.cc  native_js_wrapper.h
ggadget/tests/: CMakeLists.txt  Makefile.am  backoff_test.cc  basic_element_test.cc  common_test.cc  digest_utils_test.cc  element_factory_test.cc  elements_test.cc  encryptor_test.cc  extension_manager_test.cc  file_manager_test.cc  gadget_metadata_test.cc  image_cache_test.cc  init_extensions.h  locales_test.cc  main_loop_test.h  math_utils_test.cc  mocked_element.cc  mocked_element.h  mocked_file_manager.h  mocked_gadget_host.h  mocked_host.h  mocked_timer_main_loop.h  mocked_view.h  mocked_view_host.h  mocked_xml_http_request.h  module_test.cc  native_main_loop.h  native_main_loop_test.cc  scriptable_enumerator_test.cc  scriptable_helper_test.cc  scriptables.cc  scriptables.h  signal_test.cc  slot_test.cc  slots.cc  slots.h  static_scriptable_test.cc  string_utils_test.cc  system_utils_test.cc  (+9 more)
ggadget/win32/: single_view_host.cc  single_view_host.h  text_renderer.cc
ggadget/xdg/: CMakeLists.txt  Makefile.am  desktop_entry.cc  icon_theme.cc  utilities.cc  utilities.h
hosts/gtk/: CMakeLists.txt  Makefile.am  gadget_browser_host.h  ggl-gtk.desktop.in  gtk_host_base.cc  gtk_host_base.h  main.cc  sidebar_gtk_host.cc  sidebar_gtk_host.h  simple_gtk_host.cc  simple_gtk_host.h  standalone_gtk_host.cc  standalone_gtk_host.h
hosts/qt/: CMakeLists.txt  Makefile.am  main.cc  (+4 more)
resources/: Makefile.am  builtin_gadgets.xml  common.js  ggl_about.xml  html_details_view.xml
rss_gadget/: Makefile.am  gadget.gmanifest  main.js  main.xml
trunk/: CMakeLists.txt  ChangeLog  Doxyfile  Makefile.am  THANKS  configure.ac
(+2863 files in other folders)
